--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,3 +1,9 @@
+highctidh (1.0.2025051200-1) unstable; urgency=medium
+
+  * New version released
+
+ -- Jacob Appelbaum <jacob@appelbaum.net>  Mon, 12 May 2025 14:56:08 +0200
+
 highctidh (1.0.2024092800-1) unstable; urgency=medium
 
   * New version released
